[gd_scene load_steps=3 format=3 uid="uid://dr5qkjc1mid0g"]

[ext_resource type="Script" uid="uid://bu4pbhwx85ttw" path="res://scenes/ui/Item_Slot.gd" id="1_mgpkg"]
[ext_resource type="Texture2D" uid="uid://cpo83qx3cy0wu" path="res://scenes/ui/icon.svg" id="2_dghy8"]

[node name="ItemSlot" type="PanelContainer"]
custom_minimum_size = Vector2(75, 75)
offset_right = 1.0
offset_bottom = 23.0
script = ExtResource("1_mgpkg")

[node name="Item" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="ItemSprite" type="TextureRect" parent="Item"]
unique_name_in_owner = true
modulate = Color(0.223103, 0.223103, 0.223103, 1)
layout_mode = 2
texture = ExtResource("2_dghy8")
expand_mode = 1

[node name="ItemLabel" type="Label" parent="Item"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
